fix not responsive text in filters

--- a/static/css/filters.css
+++ b/static/css/filters.css
@@ -43,6 +43,7 @@
     position: relative;
     
     height: 36px;
+    width: 330px;
     margin-bottom: 20px;
   
     font-size: 0;
